--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -8,62 +8,67 @@
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the first project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893).\n",
+    "You are welcome to use this coding environment to train your agent for the project.  Follow the instructions below to get started!\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
-    "We begin by importing some necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
+    "Run the next code cell to install a few packages.  This line will take a few minutes to run!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'unityagents'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-32b6fc16a6ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0munityagents\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mUnityEnvironment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'unityagents'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
+    "#!pip -q install ./python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will start the environment!  **_Before running the code cell below_**, change the `file_name` parameter to match the location of the Unity environment that you downloaded.\n",
-    "\n",
-    "- **Mac**: `\"path/to/Banana.app\"`\n",
-    "- **Windows** (x86): `\"path/to/Banana_Windows_x86/Banana.exe\"`\n",
-    "- **Windows** (x86_64): `\"path/to/Banana_Windows_x86_64/Banana.exe\"`\n",
-    "- **Linux** (x86): `\"path/to/Banana_Linux/Banana.x86\"`\n",
-    "- **Linux** (x86_64): `\"path/to/Banana_Linux/Banana.x86_64\"`\n",
-    "- **Linux** (x86, headless): `\"path/to/Banana_Linux_NoVis/Banana.x86\"`\n",
-    "- **Linux** (x86_64, headless): `\"path/to/Banana_Linux_NoVis/Banana.x86_64\"`\n",
-    "\n",
-    "For instance, if you are using a Mac, then you downloaded `Banana.app`.  If this file is in the same folder as the notebook, then the line below should appear as follows:\n",
-    "```\n",
-    "env = UnityEnvironment(file_name=\"Banana.app\")\n",
-    "```"
+    "The environment is already saved in the Workspace and can be accessed at the file path provided below.  Please run the next code cell without making any changes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\t\n",
+      "Unity brain name: BananaBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 37\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: discrete\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
    "source": [
-    "env = UnityEnvironment(file_name=\"...\")"
+    "from unityagents import UnityEnvironment\n",
+    "import numpy as np\n",
+    "import time\n",
+    "from collections import deque\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "\n",
+    "#env = UnityEnvironment(file_name=\"/data/Banana_Linux_NoVis/Banana.x86_64\") #to run on udacity workspace\n",
+    "env = UnityEnvironment(file_name=\"Banana.app\") #to run locally"
    ]
   },
   {
@@ -75,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,22 +95,31 @@
    "source": [
     "### 2. Examine the State and Action Spaces\n",
     "\n",
-    "The simulation contains a single agent that navigates a large environment.  At each time step, it has four actions at its disposal:\n",
-    "- `0` - walk forward \n",
-    "- `1` - walk backward\n",
-    "- `2` - turn left\n",
-    "- `3` - turn right\n",
-    "\n",
-    "The state space has `37` dimensions and contains the agent's velocity, along with ray-based perception of objects around agent's forward direction.  A reward of `+1` is provided for collecting a yellow banana, and a reward of `-1` is provided for collecting a blue banana. \n",
-    "\n",
     "Run the code cell below to print some information about the environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of agents: 1\n",
+      "Number of actions: 4\n",
+      "States look like: [1.         0.         0.         0.         0.84408134 0.\n",
+      " 0.         1.         0.         0.0748472  0.         1.\n",
+      " 0.         0.         0.25755    1.         0.         0.\n",
+      " 0.         0.74177343 0.         1.         0.         0.\n",
+      " 0.25854847 0.         0.         1.         0.         0.09355672\n",
+      " 0.         1.         0.         0.         0.31969345 0.\n",
+      " 0.        ]\n",
+      "States have length: 37\n"
+     ]
+    }
+   ],
    "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
@@ -132,18 +146,24 @@
     "\n",
     "In the next code cell, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
     "\n",
-    "Once this cell is executed, you will watch the agent's performance, if it selects an action (uniformly) at random with each time step.  A window should pop up that allows you to observe the agent, as it moves through the environment.  \n",
-    "\n",
-    "Of course, as part of the project, you'll have to change the code so that the agent is able to use its experience to gradually choose better actions when interacting with the environment!"
+    "Note that **in this coding environment, you will not be able to watch the agent while it is training**, and you should set `train_mode=True` to restart the environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
+    "env_info = env.reset(train_mode=True)[brain_name] # reset the environment\n",
     "state = env_info.vector_observations[0]            # get the current state\n",
     "score = 0                                          # initialize the score\n",
     "while True:\n",
@@ -164,7 +184,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When finished, you can close the environment."
+    "### 4. It's Your Turn!\n",
+    "\n",
+    "Now it's your turn to train your own agent to solve the environment!  A few **important notes**:\n",
+    "- When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
+    "```python\n",
+    "env_info = env.reset(train_mode=True)[brain_name]\n",
+    "```\n",
+    "- To structure your work, you're welcome to work directly in this Jupyter notebook, or you might like to start over with a new file!  You can see the list of files in the workspace by clicking on **_Jupyter_** in the top left corner of the notebook.\n",
+    "- In this coding environment, you will not be able to watch the agent while it is training.  However, **_after training the agent_**, you can download the saved model weights to watch the agent on your own machine! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dqn_agent import Agent\n",
+    "\n",
+    "agent = Agent(state_size=37, action_size=4, seed=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 73\tAverage Score: -0.03"
+     ]
+    }
+   ],
+   "source": [
+    "update_num = 2\n",
+    "\n",
+    "def dqn(n_episodes=1000, max_t=1000):\n",
+    "    \"\"\"Deep Q-Learning.\n",
+    "    \n",
+    "    Params\n",
+    "    ======\n",
+    "        n_episodes (int): maximum number of training episodes\n",
+    "        max_t (int): maximum number of timesteps per episode\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    epsilon=1.0\n",
+    "    epsilon_limit=0.05\n",
+    "    eps_decay=1e-3\n",
+    "    scores = []                        # list containing scores from each episode\n",
+    "    scores_deque = deque(maxlen=100)  # last 100 scores\n",
+    "    \n",
+    "    for i_episode in range(1, n_episodes+1):     \n",
+    "        env_info = env.reset(train_mode=True)[brain_name]\n",
+    "        state = env_info.vector_observations[0]            \n",
+    "        score = 0\n",
+    "        for t in range(max_t): \n",
+    "            action = agent.act(state, epsilon)        \n",
+    "            env_info = env.step(action)[brain_name]        \n",
+    "            next_state = env_info.vector_observations[0]   \n",
+    "            reward = env_info.rewards[0]                  \n",
+    "            done = env_info.local_done[0]                  \n",
+    "            agent.step(state, action, reward, next_state, done) \n",
+    "            \n",
+    "            score += reward                                \n",
+    "            state = next_state    \n",
+    "            \n",
+    "            for i in range(update_num):\n",
+    "                agent.update()\n",
+    "                \n",
+    "            if done:                                       \n",
+    "                break\n",
+    "        scores_deque.append(score)       \n",
+    "        scores.append(score)              \n",
+    "        eps = max(epsilon_limit, epsilon-eps_decay)\n",
+    "        \n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_deque)), end=\"\")\n",
+    "        \n",
+    "        if np.mean(scores_deque)>=25.0:\n",
+    "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "            torch.save(agent.qnetwork_local.state_dict(), \"ddqn_checkpoint.pth\")\n",
+    "            break\n",
+    "            \n",
+    "    torch.save(agent.qnetwork_local.state_dict(), \"ddqn_checkpoint.pth\") \n",
+    "    return scores\n",
+    "\n",
+    "\n",
+    "scores = dqn()\n",
+    "\n",
+    "\n",
+    "# plot the scores\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.plot(np.arange(len(scores)), scores)\n",
+    "plt.ylabel('Score')\n",
+    "plt.xlabel('Episode #')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load an agent and watch it act\n",
+    "\n",
+    "# load the weights from file\n",
+    "agent.qnetwork_local.load_state_dict(torch.load('ddqn_checkpoint.pth',map_location='cpu'))\n",
+    "\n",
+    "state = env_info.vector_observations[0] # get the current state\n",
+    "\n",
+    "for i in range(3):\n",
+    "    env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
+    "    score = 0\n",
+    "    for j in range(200):\n",
+    "        action = agent.act(state)\n",
+    "        env_info = env.step(action)[brain_name]\n",
+    "        state = env_info.vector_observations[0]\n",
+    "        reward = env_info.rewards[0]\n",
+    "        done = env_info.local_done[0]\n",
+    "        score += reward\n",
+    "        if done:\n",
+    "            break"
    ]
   },
   {
@@ -174,18 +329,6 @@
    "outputs": [],
    "source": [
     "env.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. It's Your Turn!\n",
-    "\n",
-    "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
-    "```python\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```"
    ]
   }
  ],
